infra/service.tmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: messenger-$BRANCH_NAME
  namespace: $BRANCH_NAME
spec:
  type: NodePort
  selector:
    app: messenger-$BRANCH_NAME
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: messenger
