infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messenger-pro
  namespace: pro
spec:
  selector:
    app: messenger-pro
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
      name: redis
      nodePort: 30001
  type: NodePort
